--- a/Baseline/configs/para/transfer_learning_pc.yaml
+++ b/Baseline/configs/para/transfer_learning_pc.yaml
@@ -9,7 +9,8 @@ ADAPTER:
 DATA:
   SRC_DATASET: biomedical
   BIOMEDICAL:
-    - pc
+    DATASETS:
+      - pc
   TGT_DATASET: chemdner
   GRANULARITY: para
 
