--- a/Baseline/configs/para/transfer_learning_ms_clus.yaml
+++ b/Baseline/configs/para/transfer_learning_ms_clus.yaml
@@ -9,8 +9,7 @@ ADAPTER:
 DATA:
   SRC_DATASET: biomedical
   BIOMEDICAL:
-    DATASETS:
-      - pc
+    SIM_METHOD: sentEnc-centraldist
   TGT_DATASET: chemdner
   GRANULARITY: para
 
@@ -23,15 +22,24 @@ TRAIN:
   LR: 0.0001
   ORACLE: False
   TWO_STAGE: True
+  SEED: 42
 
 EVAL:
   OVERWRITE: True
   BATCH_SIZE: 128
 
 LOSSES:
-  NAME: CrossEntropy
+  NAME: CE_MS
+  LAMBDA_DISC: 0.2
+  LAMBDA_CLUS: 0.1
+  MULTI_SIMILARITY_LOSS:
+    SCALE_POS: 2.0
+    SCALE_NEG: 5.0
+    SCALE_POS_WEIGHT: 6.0
+    SCALE_NEG_WEIGHT: 10.0
+    VANILA: True
 
 OUTPUT:
-  ADAPTER_SAVE_DIR: adapter/para/pc
-  HEAD_SAVE_DIR: head/para/pc
-  RESULT_SAVE_DIR: results/para/pc
+  ADAPTER_SAVE_DIR: adapter/para/ms/sentEnc-clus
+  HEAD_SAVE_DIR: head/para/ms/sentEnc-clus
+  RESULT_SAVE_DIR: results/para/ms/sentEnc-clus
