--- a/Baseline/configs/para/transfer_learning_ms_vanilla.yaml
+++ b/Baseline/configs/para/transfer_learning_ms_vanilla.yaml
@@ -27,7 +27,8 @@ EVAL:
 
 LOSSES:
   NAME: CE_MS
-  LAMBDA: 0.1
+  LAMBDA_DISC: 0.2
+  LAMBDA_CLUS: 0
   MULTI_SIMILARITY_LOSS:
     SCALE_POS: 2.0
     SCALE_NEG: 5.0
