--- a/Baseline/configs/para/transfer_learning_crossner.yaml
+++ b/Baseline/configs/para/transfer_learning_crossner.yaml
@@ -7,10 +7,8 @@ ADAPTER:
   EVAL: biomedical_ner_bert-base-uncased_2stage
 
 DATA:
-  SRC_DATASET: biomedical
-  BIOMEDICAL:
-    - pc
-  TGT_DATASET: chemdner
+  SRC_DATASET: politics
+  TGT_DATASET: music
   GRANULARITY: para
 
 TRAIN:
@@ -22,23 +20,15 @@ TRAIN:
   LR: 0.0001
   ORACLE: False
   TWO_STAGE: True
-  SEED: 42
 
 EVAL:
   OVERWRITE: True
   BATCH_SIZE: 128
 
 LOSSES:
-  NAME: CE_MS
-  LAMBDA: 0.1
-  MULTI_SIMILARITY_LOSS:
-    SCALE_POS: 2.0
-    SCALE_NEG: 5.0
-    SCALE_POS_WEIGHT: 6.0
-    SCALE_NEG_WEIGHT: 10.0
-    VANILA: False
+  NAME: CrossEntropy
 
 OUTPUT:
-  ADAPTER_SAVE_DIR: adapter/para/ms/pc
-  HEAD_SAVE_DIR: head/para/ms/pc
-  RESULT_SAVE_DIR: results/para/ms/pc
+  ADAPTER_SAVE_DIR: adapter/para
+  HEAD_SAVE_DIR: head/para
+  RESULT_SAVE_DIR: results/para
