--- a/Baseline/configs/para/transfer_learning_ms.yaml
+++ b/Baseline/configs/para/transfer_learning_ms.yaml
@@ -9,7 +9,7 @@ ADAPTER:
 DATA:
   SRC_DATASET: biomedical
   BIOMEDICAL:
-    SIM_METHOD: concat-central
+    SIM_METHOD: None
   TGT_DATASET: chemdner
   GRANULARITY: para
 
@@ -31,7 +31,7 @@ EVAL:
 LOSSES:
   NAME: CE_MS
   LAMBDA_DISC: 0.2
-  LAMBDA_CLUS: 0
+  LAMBDA_CLUS: 0.8
   MULTI_SIMILARITY_LOSS:
     SCALE_POS: 2.0
     SCALE_NEG: 5.0
