--- a/Baseline/configs/para/transfer_learning_ms_crossner.yaml
+++ b/Baseline/configs/para/transfer_learning_ms_crossner.yaml
@@ -7,10 +7,8 @@ ADAPTER:
   EVAL: biomedical_ner_bert-base-uncased_2stage
 
 DATA:
-  SRC_DATASET: biomedical
-  BIOMEDICAL:
-    - cg
-  TGT_DATASET: chemdner
+  SRC_DATASET: politics
+  TGT_DATASET: music
   GRANULARITY: para
 
 TRAIN:
@@ -22,7 +20,6 @@ TRAIN:
   LR: 0.0001
   ORACLE: False
   TWO_STAGE: True
-  SEED: 42
 
 EVAL:
   OVERWRITE: True
@@ -30,15 +27,16 @@ EVAL:
 
 LOSSES:
   NAME: CE_MS
-  LAMBDA: 0.1
+  LAMBDA_DISC: 0.1
+  LAMBDA_CLUS: 0.4
   MULTI_SIMILARITY_LOSS:
     SCALE_POS: 2.0
     SCALE_NEG: 5.0
     SCALE_POS_WEIGHT: 6.0
     SCALE_NEG_WEIGHT: 10.0
-    VANILA: False
+    VANILA: True
 
 OUTPUT:
-  ADAPTER_SAVE_DIR: adapter/para/ms/cg
-  HEAD_SAVE_DIR: head/para/ms/cg
-  RESULT_SAVE_DIR: results/para/ms/cg
+  ADAPTER_SAVE_DIR: adapter/para
+  HEAD_SAVE_DIR: head/para
+  RESULT_SAVE_DIR: results/para
