--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ Baseline/.cache
 Baseline/adapter
 Baseline/head
 Baseline/results
-Baseline/analysis/
+Baseline/analysis
+Baseline/data
 Baseline/*.txt
