--- a/Baseline/configs/para/transfer_learning_ms_single.yaml
+++ b/Baseline/configs/para/transfer_learning_ms_single.yaml
@@ -31,13 +31,13 @@ EVAL:
 LOSSES:
   NAME: CE_MS
   LAMBDA_DISC: 0.05
-  LAMBDA_CLUS: 0.4
+  LAMBDA_CLUS: 0.8
   MULTI_SIMILARITY_LOSS:
     SCALE_POS: 2.0
     SCALE_NEG: 5.0
     SCALE_POS_WEIGHT: 6.0
     SCALE_NEG_WEIGHT: 10.0
-    VANILA: False 
+    VANILLA: False 
 
 OUTPUT:
   ADAPTER_SAVE_DIR: adapter/para/ms
