--- a/Baseline/configs/sample.yaml
+++ b/Baseline/configs/sample.yaml
@@ -7,8 +7,10 @@ ADAPTER:
   EVAL: biomedical_ner_bert-base-uncased_2stage
 
 DATA:
-  SRC_DATASET: politics
-  TGT_DATASET: music
+  SRC_DATASET: biomedical
+  BIOMEDICAL:
+    SIM_METHOD: concat-clus
+  TGT_DATASET: chemdner
   GRANULARITY: para
 
 TRAIN:
@@ -26,7 +28,7 @@ EVAL:
   BATCH_SIZE: 128
 
 LOSSES:
-  NAME: CE_MS
+  NAME: CrossEntropy
   LAMBDA_DISC: 0.1
   LAMBDA_CLUS: 0
   MULTI_SIMILARITY_LOSS:
@@ -34,9 +36,9 @@ LOSSES:
     SCALE_NEG: 5.0
     SCALE_POS_WEIGHT: 6.0
     SCALE_NEG_WEIGHT: 10.0
-    VANILLA: True
+    VANILLA: False
 
 OUTPUT:
-  ADAPTER_SAVE_DIR: adapter/para/ms
-  HEAD_SAVE_DIR: head/para/ms
-  RESULT_SAVE_DIR: results/para/ms
+  ADAPTER_SAVE_DIR: adapter/para
+  HEAD_SAVE_DIR: head/para
+  RESULT_SAVE_DIR: results/para
