--- a/Baseline/configs/para/few-shot_bert.yaml
+++ b/Baseline/configs/para/few-shot_bert.yaml
@@ -22,10 +22,10 @@ EVAL:
   OVERWRITE: True
   BATCH_SIZE: 128
 
-LOSSES:
+TGT_LOSS:
   NAME: CrossEntropy
 
 OUTPUT:
-  ADAPTER_SAVE_DIR: adapter/para
-  HEAD_SAVE_DIR: head/para
-  RESULT_SAVE_DIR: results/para
+  ADAPTER_SAVE_DIR: adapter/para/fs/None/chemdner
+  HEAD_SAVE_DIR: head/para/fs/None/chemdner
+  RESULT_SAVE_DIR: results/para/fs/None/chemdner
