--- a/Baseline/configs/para/transfer_learning.yaml
+++ b/Baseline/configs/para/transfer_learning.yaml
@@ -3,8 +3,8 @@ MODEL:
   PATH: /mnt/data/oss_beijing/liuhongyi/models/bert-base-uncased
   
 ADAPTER:
-  TRAIN: None
-  EVAL: biomedical_ner_bert-base-uncased_2stage
+  TRAIN: adapter/para/tl/biomedical_None/chemdner/biomedical_ner_bert-base-uncased_inter
+  EVAL: biomedical_ner_bert-base-uncased
 
 DATA:
   SRC_DATASET: biomedical
@@ -21,16 +21,19 @@ TRAIN:
   SRC_LR: 0.0001
   LR: 0.0001
   ORACLE: False
-  TWO_STAGE: True
+  TWO_STAGE: False
 
 EVAL:
   OVERWRITE: True
   BATCH_SIZE: 128
 
-LOSSES:
+SRC_LOSS:
+  NAME: CrossEntropy
+
+TGT_LOSS:
   NAME: CrossEntropy
 
 OUTPUT:
-  ADAPTER_SAVE_DIR: adapter/para/biomedical_None/chemdner
-  HEAD_SAVE_DIR: head/para/biomedical_None/chemdner
-  RESULT_SAVE_DIR: results/para/biomedical_None/chemdner
+  ADAPTER_SAVE_DIR: adapter/para/tl/biomedical_None/chemdner
+  HEAD_SAVE_DIR: head/para/tl/biomedical_None/chemdner
+  RESULT_SAVE_DIR: results/para/tl/biomedical_None/chemdner
