--- a/Baseline/configs/para/transfer_learning_eg.yaml
+++ b/Baseline/configs/para/transfer_learning_eg.yaml
@@ -3,13 +3,13 @@ MODEL:
   PATH: /mnt/data/oss_beijing/liuhongyi/models/bert-base-uncased
   
 ADAPTER:
-  TRAIN: None
-  EVAL: biomedical_ner_bert-base-uncased_2stage
+  TRAIN: adapter/para/eg/biomedical_None/chemdner/biomedical_ner_bert-base-uncased_inter
+  EVAL: biomedical_ner_bert-base-uncased
 
 DATA:
   SRC_DATASET: biomedical
   BIOMEDICAL:
-    SIM_METHOD: None
+    SIM_METHOD: concat-max
   TGT_DATASET: chemdner
   GRANULARITY: para
 
@@ -28,18 +28,20 @@ EVAL:
   OVERWRITE: True
   BATCH_SIZE: 128
 
-LOSSES:
+SRC_LOSS:
   NAME: CE_MS
-  LAMBDA_DISC: 0.05
-  LAMBDA_CLUS: 0.8
+  LAMBDA: 0.4
   MULTI_SIMILARITY_LOSS:
     SCALE_POS: 2.0
     SCALE_NEG: 5.0
-    SCALE_POS_WEIGHT: 6.0
+    SCALE_POS_WEIGHT: 4.0
     SCALE_NEG_WEIGHT: 10.0
-    VANILLA: False 
+    VANILLA: False
+
+TGT_LOSS:
+  NAME: CrossEntropy
 
 OUTPUT:
-  ADAPTER_SAVE_DIR: adapter/para/ms
-  HEAD_SAVE_DIR: head/para/ms
-  RESULT_SAVE_DIR: results/para/ms
+  ADAPTER_SAVE_DIR: adapter/para/eg/biomedical_None/chemdner
+  HEAD_SAVE_DIR: head/para/eg/biomedical_None/chemdner
+  RESULT_SAVE_DIR: results/para/eg/biomedical_None/chemdner
