--- a/Baseline/configs/sample.yaml
+++ b/Baseline/configs/sample.yaml
@@ -10,7 +10,7 @@ DATA:
   SRC_DATASET: biomedical
   BIOMEDICAL:
     SIM_METHOD: None
-  TGT_DATASET: chemdner
+  TGT_DATASET: chemdner_pse
   GRANULARITY: para
 
 TRAIN:
@@ -21,22 +21,17 @@ TRAIN:
   SRC_LR: 0.0001
   LR: 0.0001
   ORACLE: False
-  TWO_STAGE: True
+  TWO_STAGE: False
 
 EVAL:
   OVERWRITE: True
   BATCH_SIZE: 128
 
-LOSSES:
+SRC_LOSS:
   NAME: CrossEntropy
-  LAMBDA_DISC: 0.1
-  LAMBDA_CLUS: 0
-  MULTI_SIMILARITY_LOSS:
-    SCALE_POS: 2.0
-    SCALE_NEG: 5.0
-    SCALE_POS_WEIGHT: 6.0
-    SCALE_NEG_WEIGHT: 10.0
-    VANILLA: False
+
+TGT_LOSS:
+  NAME: CrossEntropy
 
 OUTPUT:
   ADAPTER_SAVE_DIR: adapter/para
