--- a/Baseline/configs/para/transfer_learning.yaml
+++ b/Baseline/configs/para/transfer_learning.yaml
@@ -1,9 +1,9 @@
 MODEL:
   BACKBONE: bert-base-uncased
-  PATH: /mnt/data/oss_beijing/liuhongyi/models/bert-base-uncased
+  PATH: /root/autodl-tmp/models/bert-base-uncased
   
 ADAPTER:
-  TRAIN: adapter/para/tl/biomedical/biomedical_ner_bert-base-uncased_inter
+  TRAIN: None
   EVAL: biomedical_ner_bert-base-uncased
 
 DATA:
