--- a/Baseline/configs/para/transfer_learning_disc.yaml
+++ b/Baseline/configs/para/transfer_learning_disc.yaml
@@ -3,13 +3,14 @@ MODEL:
   PATH: /root/autodl-tmp/models/bert-base-uncased
   
 ADAPTER:
-  TRAIN: adapter/para/tl/biomedical/biomedical_ner_bert-base-uncased_inter
-  EVAL: biomedical_ner_bert-base-uncased
+  TRAIN: None
+  EVAL: None
 
 DATA:
   SRC_DATASET: biomedical
   BIOMEDICAL:
     SIM_METHOD: None
+    DATASETS: None
   TGT_DATASET: chemdner_pse
   GRANULARITY: para
 
@@ -39,6 +40,6 @@ TGT_LOSS:
     SCALE_NEG: 5.0
 
 OUTPUT:
-  ADAPTER_SAVE_DIR: adapter/para/tl/disc/biomedical/chemdner_pse
-  HEAD_SAVE_DIR: head/para/tl/disc/biomedical/chemdner_pse
-  RESULT_SAVE_DIR: results/para/tl/disc/biomedical/chemdner_pse
+  ADAPTER_SAVE_DIR: adapter/para/tl
+  HEAD_SAVE_DIR: head/para/tl
+  RESULT_SAVE_DIR: results/para/tl
