--- a/configs/para/transfer_learning_eg.yaml
+++ b/configs/para/transfer_learning_eg.yaml
@@ -9,7 +9,7 @@ ADAPTER:
 DATA:
   SRC_DATASET: biomedical
   BIOMEDICAL:
-    SIM_METHOD: sentEnc-max
+    SIM_METHOD: None
     DATASETS: None
   TGT_DATASET: chemdner
   GRANULARITY: para
