--- a/configs/para/transfer_learning_disc-ce_dapt.yaml
+++ b/configs/para/transfer_learning_disc-ce_dapt.yaml
@@ -1,9 +1,9 @@
 MODEL:
-  BACKBONE: bert-base-uncased
-  PATH: /root/autodl-tmp/models/bert-base-uncased
+  BACKBONE: DAPT_chemdner
+  PATH: /root/autodl-tmp/models/DAPT_chemdner
   
 ADAPTER:
-  TRAIN: adapter/para/tl/biomedical/biomedical_ner_bert-base-uncased_inter
+  TRAIN: adapter/para/tl/biomedical/biomedical_ner_DAPT_chemdner_inter
   EVAL: None
 
 DATA:
