--- a/configs/para/transfer_learning_src_eval.yaml
+++ b/configs/para/transfer_learning_src_eval.yaml
@@ -5,6 +5,7 @@ MODEL:
 ADAPTER:
   TRAIN: None
   EVAL: biomedical_ner_bert-base-uncased_inter
+  ENABLE: True
 
 HEAD:
   EVAL: biomedical_ner_bert-base-uncased_head_inter
