--- a/configs/para/transfer_learning.yaml
+++ b/configs/para/transfer_learning.yaml
@@ -1,6 +1,6 @@
 MODEL:
   BACKBONE: bert-base-uncased
-  PATH: /root/autodl-tmp/models/bert-base-uncased
+  PATH: PATH_TO_BERT
   
 ADAPTER:
   TRAIN: None
